--- a/index.html
+++ b/index.html
@@ -362,6 +362,17 @@
         transform: translateX(5px);
       }
 
+      .project-links-container {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 0.5rem;
+      }
+
+      .project-links-container .project-link::after {
+        content: "↗";
+      }
+
       /* Contact Section */
       .contact-content {
         max-width: 600px;
@@ -491,7 +502,7 @@
     <!-- Navigation -->
     <nav id="navbar">
       <div class="nav-container">
-        <a href="#home" class="logo">YourName</a>
+        <a href="#home" class="logo">ClarencePanto</a>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -512,10 +523,10 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
       <div class="hero-content">
-        <h1>Hi, I'm [Your Name]</h1>
+        <h1>Hi, I'm Clarence Panto</h1>
         <p class="subtitle">Software Developer</p>
         <p class="description">
-          I build elegant solutions to complex problems. Passionate about clean
+          I build solutions to complex problems. Passionate about clean
           code, user experience, and creating software that makes a difference.
         </p>
         <div class="cta-buttons">
@@ -532,7 +543,7 @@
       <div class="about-content">
         <div class="about-text reveal">
           <p>
-            I'm a software developer with a passion for building innovative and
+         I'm a software developer with a passion for building innovative and
             user-friendly applications. I love turning complex problems into
             simple, beautiful, and intuitive solutions.
           </p>
@@ -564,69 +575,51 @@
     <section id="projects">
       <h2 class="section-title">Featured Projects</h2>
       <div class="projects-grid">
-        <!-- Project 1 -->
+        <!-- Project 1 - StockFlow -->
         <div class="project-card reveal">
-          <h3>Project Name 1</h3>
+          <h3>StockFlow - Inventory Management System</h3>
           <p>
-            Brief description of your project. Explain what it does, the problem
-            it solves, and your role in building it.
+            A comprehensive real-time inventory management system featuring
+            product tracking, order processing with automatic stock updates,
+            live notifications across tabs, analytics dashboard, and role-based
+            access control. Built with modern full-stack technologies.
           </p>
           <div class="project-tech">
-            <span class="tech-tag">React</span>
-            <span class="tech-tag">Node.js</span>
-            <span class="tech-tag">MongoDB</span>
-          </div>
-          <a
-            href="https://github.com/yourusername/project1"
-            class="project-link"
-            target="_blank"
-          >
-            View Project
-          </a>
-        </div>
-
-        <!-- Project 2 -->
-        <div class="project-card reveal">
-          <h3>Project Name 2</h3>
-          <p>
-            Brief description of your project. Explain what it does, the problem
-            it solves, and your role in building it.
-          </p>
-          <div class="project-tech">
-            <span class="tech-tag">Python</span>
-            <span class="tech-tag">Django</span>
-            <span class="tech-tag">PostgreSQL</span>
-          </div>
-          <a
-            href="https://github.com/yourusername/project2"
-            class="project-link"
-            target="_blank"
-          >
-            View Project
-          </a>
-        </div>
-
-        <!-- Project 3 -->
-        <div class="project-card reveal">
-          <h3>Project Name 3</h3>
-          <p>
-            Brief description of your project. Explain what it does, the problem
-            it solves, and your role in building it.
-          </p>
-          <div class="project-tech">
+            <span class="tech-tag">Next.js 16</span>
             <span class="tech-tag">TypeScript</span>
-            <span class="tech-tag">Next.js</span>
-            <span class="tech-tag">Tailwind</span>
+            <span class="tech-tag">Node.js</span>
+            <span class="tech-tag">Express</span>
+            <span class="tech-tag">PostgreSQL</span>
+            <span class="tech-tag">Prisma</span>
+            <span class="tech-tag">Socket.IO</span>
+            <span class="tech-tag">React Query</span>
           </div>
-          <a
-            href="https://github.com/yourusername/project3"
-            class="project-link"
-            target="_blank"
-          >
-            View Project
-          </a>
+          <div class="project-links-container">
+            <a
+              href="https://stockflow-api-frontend.vercel.app"
+              class="project-link"
+              target="_blank"
+            >
+              Live Demo
+            </a>
+            <span style="color: var(--text-secondary)">•</span>
+            <a
+              href="https://github.com/clarencepanto/stockflow-frontend"
+              class="project-link"
+              target="_blank"
+            >
+              Frontend
+            </a>
+            <span style="color: var(--text-secondary)">•</span>
+            <a
+              href="https://github.com/clarencepanto/stockflow-backend"
+              class="project-link"
+              target="_blank"
+            >
+              Backend
+            </a>
+          </div>
         </div>
-      </div>
     </section>
 
     <!-- Contact Section -->
@@ -639,31 +632,18 @@
         </p>
         <div class="contact-links">
           <a
-            href="https://github.com/yourusername"
+            href="https://github.com/clarencepanto"
             class="social-link"
             target="_blank"
             title="GitHub"
             >GH</a
           >
+          
           <a
-            href="https://linkedin.com/in/yourusername"
-            class="social-link"
-            target="_blank"
-            title="LinkedIn"
-            >IN</a
-          >
-          <a
-            href="mailto:your.email@example.com"
+            href="mailto:clardaing128@gmail.com"
             class="social-link"
             title="Email"
             >@</a
-          >
-          <a
-            href="https://twitter.com/yourusername"
-            class="social-link"
-            target="_blank"
-            title="Twitter"
-            >TW</a
           >
         </div>
         <a href="mailto:your.email@example.com" class="btn btn-primary"
@@ -674,7 +654,7 @@
 
     <!-- Footer -->
     <footer>
-      <p>&copy; 2024 [Your Name]. Built with passion and coffee ☕</p>
+      <p>&copy; 2025 [Clarence Panto]. Built with passion and coffee ☕</p>
     </footer>
 
     <script>
