--- a/index.html
+++ b/index.html
@@ -543,14 +543,11 @@
       <div class="about-content">
         <div class="about-text reveal">
           <p>
-         I'm a software developer with a passion for building innovative and
-            user-friendly applications. I love turning complex problems into
-            simple, beautiful, and intuitive solutions.
+         I build simple and effective solutions to automate your businesses. Passionate about saving time , money, and creating software that makes a difference.
           </p>
           <p>
-            When I'm not coding, you'll find me exploring new technologies,
-            contributing to open-source projects, or sharing knowledge with the
-            developer community.
+           I'm a software developer with a passion for helping small businesses take back their time and do what actually matters by building user-friendly applications. I love building connections and relationships with people and work through solutions with them. 
+           When I'm not coding, you'll find me exploring new technologies, doing my hobbies such as cooking, chess, playing piano, or going to meetups and meet different people with different backgrounds.
           </p>
         </div>
         <div class="skills reveal">
@@ -559,13 +556,14 @@
             <span class="skill-tag">JavaScript</span>
             <span class="skill-tag">React</span>
             <span class="skill-tag">Node.js</span>
-            <span class="skill-tag">Python</span>
             <span class="skill-tag">TypeScript</span>
             <span class="skill-tag">Git</span>
             <span class="skill-tag">SQL</span>
-            <span class="skill-tag">Docker</span>
-            <span class="skill-tag">AWS</span>
+            <span class="skill-tag">Supabase</span>
             <span class="skill-tag">REST APIs</span>
+            <span class="skill-tag">Prisma</span>
+            <span class="skill-tag">Next.js</span>
+            <span class="skill-tag">PostgreSQL</span>
           </div>
         </div>
       </div>
